apps/base/points/deployment-couchdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb
  namespace: points
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
        - name: couchdb
          image: couchdb:3.5.1
          ports:
            - containerPort: 5984
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: couchdb-data
              mountPath: /opt/couchdb/data
      volumes:
        - name: couchdb-data
          persistentVolumeClaim:
            claimName: couchdb-data
