apps/base/points/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: points
  namespace: points
spec:
  replicas: 3
  selector:
    matchLabels:
      app: points
  template:
    metadata:
      labels:
        app: points
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: points
          image: ghcr.io/bacherik/points:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
