apps/base/points/service-couchdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: points
spec:
  type: ClusterIP
  selector:
    app: couchdb
  ports:
    - port: 5984
      targetPort: 5984
