apps/base/points/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: points
  namespace: points
spec:
  selector:
    app: points
  type: ClusterIP
  ports:
    - name: http
      port: 80
